<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mathbrain</string>
    <string name="action_settings">Settings</string>
    <string name="play_button">Play</string>
    <string name="hs_button">Highscores</string>
    <string name="help_button">Help</string>
    <string name="credits_button">Credits</string>
    <string name="title_activity_game">Play</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_scores">Score</string>
    <string name="title_activity_panorama">Mathbrain</string>
    <string name="gameQuestion">Question:</string>
    <string name="gameTotal30">/ 30</string>
    <string name="gameWrong">Wrong:</string>
    <string name="equal">=</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="c">c</string>
    <string name="back">&lt;-</string>
    <string name="blank"></string>
    <string name="scoretime">Time</string>
    <string name="scorewrong">Wrong</string>
    <string name="scoretotal">Total</string>
    <string name="scorename">Name</string>
    <string name="scorediv">:</string>
    <string name="h1">1.</string>
    <string name="h2">2.</string>
    <string name="h3">3.</string>
    <string name="h4">4.</string>
    <string name="h5">5.</string>
    <string name="helphead">Help</string>
    <string name="help1">How long will it take for you to perform 30 calculations???</string>
    <string name="help2">Calculations involving only Addition, subtraction, multiplication or division operations with rising difficulty as the challenge progress… There won\'t be any decimal or negative numbers to consider in any questions or answers…</string>
    <string name="help3">You may consider this in your strategy…</string>
    <string name="help4">Also keep in mind that each wrong answer has a one second penalty… ;)</string>
    <string name="creditshead">Credits</string>
    <string name="credits1">Fireworkshop</string>
    <string name="credits2">Programming and Testing</string>
    <string name="credits3">Amal Dev</string>
    <string name="credits4">Graphics</string>
    <string name="credits5">Devakanth</string>
    <string name="credits6">Expecting your appreciation, suggestions and complaints.</string>
    <string name="credits7">Contact:</string>
    <string name="credits8">fireworkshopteam@gmail.com</string>
    <string name="playAgain">Play Again</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
