<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoresActivity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/appNameActivity" />

    <TextView
        android:id="@+id/headMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_scores"
        android:textSize="@dimen/text30" />

    <TextView
        android:id="@+id/scoreComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/paddingWithHeading"
        android:textColor="@color/red"
        android:textSize="@dimen/text24" />

    <TableRow
            android:id="@+id/TableRow2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoretime"
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorediv"
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/scoreTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoretime"
            android:textSize="@dimen/text24" />

    </TableRow>

    <TableRow
            android:id="@+id/TableRow3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorewrong" 
            android:layout_weight="1"
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorediv" 
            android:textSize="@dimen/text24" />
        
        <TextView
            android:id="@+id/scoreWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorewrong"
            android:layout_weight="1" 
            android:textSize="@dimen/text24" />

    </TableRow>

    <TableRow
            android:id="@+id/TableRow4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoretotal" 
            android:layout_weight="1"
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorediv"
            android:textSize="@dimen/text24"  />
        
        <TextView
            android:id="@+id/scoreTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoretotal"
            android:textColor="@color/red"
            android:textSize="@dimen/text24" />

    </TableRow>

   <TableRow
            android:id="@+id/TableRow5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/scorename" 
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/textViewDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorediv"
            android:textSize="@dimen/text24" />
        
        <EditText
            android:id="@+id/scoreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text24" />

    </TableRow>
	<LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

		<Button
		    android:id="@+id/scoreSaveButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:onClick="hsClicked"
		    android:text="@string/title_activity_highscores"
		    android:textSize="@dimen/text30" />

	</LinearLayout>
	<LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

    <Button
        android:id="@+id/scorePlayAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="playClicked"
        android:text="@string/playAgain"
        android:textSize="@dimen/text30" />

    </LinearLayout>

</TableLayout>
